File structure, basic skeleton and styling

--- a/gear-vue-app/public/index.html
+++ b/gear-vue-app/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Gear by Cashew</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker');
+      </style>
   </head>
   <body>
     <div id="app"></div>
