--- a/gear-vue-app/public/index.html
+++ b/gear-vue-app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="utf-8">
-    <title>Gear by Cashew</title>
+    <title>Bump and Stitch</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker');
       </style>
